# Mosika

./: .gitignore  AGENTS.md  PROGRESS.md  README.md  package-lock.json  package.json
apps/desktop/: components.json  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.vue  main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/api/: config.ts  health.ts  tasks.ts
apps/desktop/src/components/: ProjectMenubar.vue
apps/desktop/src/composables/: useConversationStore.ts  useProjectRegistry.ts  useServerHealth.ts  useTaskRunner.ts  useWindowControls.ts
apps/desktop/src/lib/: markdown.ts
apps/desktop/src/pages/: HomePage.vue  PlaceholderPage.vue  WorkbenchPage.vue
apps/desktop/src/styles/: workbench.css
apps/desktop/src/types/: workbench.ts
design-reference/: critique.json  index.html  index.html.artifact.json  settings.html  settings.html.artifact.json  task-detail.html  task-detail.html.artifact.json  workbench.html  workbench.html.artifact.json
docs/: agent-development-roadmap.md  backend-fastapi-requirements.md  frontend-conventions.md
scripts/: build-portable.mjs  build-server.mjs  dev.mjs
server/: run.py
server/app/: main.py
server/app/agents/: mock.py  runtime.py
server/app/api/: health.py  internal.py  tasks.py
server/app/core/: config.py
server/app/schemas/: agent.py
server/app/services/: event_bus.py  task_store.py
server/tests/: test_health.py  test_tasks.py
(+8 files in other folders)
